# Monte-Capcho

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
assets/: text-extractor.desktop
assets/screenshots/: screenshot-2
flatpak/: com.example.TextExtractor.json  generated-sources.json
flatpak/desktop/: com.example.TextExtractor.desktop  com.example.TextExtractor.metainfo.xml
fonts/: ocr-icons.toml
src/: cli.rs  icon.rs  main.rs  ocr.rs
