[package]
name = "text-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
iced ={version= "0.13.1",features =["highlighter", "tokio", "debug"]}
iced_native="0.10.3"
tokio ={version ="1.43.0",features=["fs"]}
rfd = "0.13"
image = "0.24"
tempfile = "3.8"
tesseract = "0.15"
anyhow = "1.0"
daemonize="0.5.0"
arboard ={ version = "3.4.1", features = ["wayland-data-control"] }
iced_futures = "0.13.2"
iced_fontello="0.13"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.6"
