[package]
name = "text-extractor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
iced ={version= "0.13.1",features =["highlighter", "tokio", "debug"]}
tokio ={version ="1.43.0",features=["fs"]}
rfd = "0.13"
image = "0.24"
tempfile = "3.8"
tesseract = "0.15"
anyhow = "1.0"
iced_fontello="0.13"
clap = { version = "4", features = ["derive"] }
imageproc = "0.23"  # or the latest version

[build-dependencies]

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "z"  # Optimize for size
strip = true     # Strip symbols


